--- a/style.css
+++ b/style.css
@@ -151,8 +151,8 @@ nav ul li a:hover, .active{
 nav ul li ul{
     display:none;
     position:absolute;
-    background:#fff;
-    border-top:1px solid var(--primaryColor);
+    background:var(--otherColor);
+    border-top:1px solid rgba(202, 198, 198, 0.4);
     /* height:100vh;
     overflow:scroll; */
     transition:.3s all;
@@ -204,7 +204,13 @@ nav i{
 /* .menu-icon, .menu_icon{
     display:none;
 } */
-
+.for_mobile{
+    display:none!important;
+}
+.for_desktop{
+    display:block;
+    margin:12px 0 5px;
+}
 button{
     background: var(--primaryColor);
     color:#fff;
@@ -487,6 +493,7 @@ main h2{
     margin:5px 0 0;
     color:var(--secondaryColor);
     font-size:2rem;
+    
 }
 main hr{
     /* width:50px; */
@@ -1246,9 +1253,10 @@ table tr:nth-child(even){
 /* aside */
 .admin_main aside{
     width:18vw;
-    background:#fff;
+    background:var(--otherColor);
     height:100vh;
     position:fixed;
+    color:#fff!;
     /* margin-top:10vh; */
     box-shadow:2px 2px 2px #c4c4c4;
 }
@@ -1288,14 +1296,15 @@ table tr:nth-child(even){
     /* font-family:'Lora'; */
     letter-spacing: 2px;
     margin-top:20px;
-    border-bottom: 1px solid rgba(102, 100, 100, .4);
+    border-bottom: 1px solid rgba(202, 198, 198, 0.4);
+    border-top: 1px solid rgba(202, 198, 198, 0.4);
     display:block;
     width:100%;
     /* text-align:center; */
     padding:5px;
 }
 .admin_main aside nav h3 a{
-    color: var(--primaryColor);
+    color: #fff;
 }
 .admin_main aside nav ul{
     width:100%;
@@ -1303,7 +1312,7 @@ table tr:nth-child(even){
 .admin_main aside nav ul li{
     /* display:flex; */
     list-style: none;
-    border-bottom:1px solid rgba(102, 100, 100, .2);
+    border-bottom:1px solid rgba(202, 198, 198, 0.4);
     width:100%;
     position:relative;
     overflow: hidden;
@@ -1312,7 +1321,7 @@ table tr:nth-child(even){
     margin-bottom:40px!important;
 }
 .admin_main aside nav ul li a{
-    color:rgb(59, 57, 57);
+    color:#fff;
     padding:15px 20px;
     display:flex;
     gap:.5rem;
@@ -1331,7 +1340,7 @@ table tr:nth-child(even){
 }
 
 .admin_main aside nav ul li a i{
-    color:rgb(131, 128, 128)!important;
+    color:#fff!important;
     font-size:1rem;
     padding:10px;
     /* background:var(--primaryColor); */
@@ -1356,7 +1365,7 @@ table tr:nth-child(even){
     margin-left:15px;
     transform:scale(0);
     /* border-left:1px solid rgba(146, 140, 140, .4); */
-    border-color: rgba(128, 126, 126, .3)!important;
+    border-color: rgba(202, 198, 198, 0.4)!important;
     overflow-x: hidden!important;
     transition:1s all;
     animation:.2s show 1;
@@ -1382,13 +1391,14 @@ table tr:nth-child(even){
 }
 .admin_main aside nav ul li ul li a:hover, .admin_main aside nav ul li ul li a:focus{
     background:none;
-    color:var(--secondaryColor);
+    color:#fff;
+    /* border-bottom: 1px solid var(--secondaryColor); */
 }
 .admin_main aside nav ul li ul li a:hover i, .admin_main aside nav ul li ul li a:focus i{
     color:var(--secondaryColor)!important;
 }
 .admin_main aside nav ul li .more_option{
-    color:rgb(131, 128, 128)!important;
+    color:#fff!important;
     background:transparent!important;
     box-shadow:none!important;
     float:right!important;
@@ -1399,7 +1409,7 @@ table tr:nth-child(even){
 .admin_main aside nav ul li ul li i{
     background:none;
     box-shadow: none !important;
-    color:var(--primaryColor)!important;
+    color:#fff!important;
 }
 .allMenus{
     display:flex;
@@ -3079,207 +3089,6 @@ x
         color:green;
         font-size: 1rem;
     }
-    /* .new_header .menu-icon a:hover{
-        color:var(--secondaryColor);
-    } */
-    /* slider */
-    .slide .taglines{
-        flex-wrap:wrap;
-        /* flex-direction: column; */
-        top:25vh;
-        /* align-items:none; */
-       left:0;
-        width:100%;
-        height:100%;
-        gap:0;
-        
-    }
-    .taglines h2{
-        width:90%;
-        /* background:var(--tertiaryColor); */
-        color:#fff;
-        font-size:2rem;
-        text-align:center;
-    }
-    .taglines p{
-        font-size:1.2rem;
-        margin:20px 0;
-        width:70%;
-        margin:0 auto;
-        text-align:center;
-    }
-    /* .taglines .btns{
-        display:block!important;
-    } */
-    .taglines .btns a{
-    
-        font-size:.8rem;
-        padding:10px;
-        margin-top:10px;
-    }
-    .taglines_note{
-        width:100%;
-        height:50%;
-        align-items: center;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        flex-direction: column;
-        
-    }
-    .big_icons{
-        width:80%;
-        margin: 0 auto;
-        text-align: center;
-    }
-    .big_icons i{
-        font-size:2.5rem;
-        text-align: center;
-    }
-    .taglines_mission{
-        display:none;
-        height:50%;
-        width:60%;
-        margin:0 auto 10px;
-    }
-    .vismis_slide div{
-        justify-content: center;
-        align-items: center;
-        
-        height:70%;
-    }
-    .vismis_slide p{
-        font-size:.9rem;
-        width:80%;
-    }
-    .vismis_slide .icon i{
-        font-size:2rem;
-        
-    }
-    #request_form{
-        width:100%;
-        padding:5px;
-        left:0;
-    }
-    #request_form h3{
-        font-size:1.2rem;
-        text-align: center;
-    }
-    #requestInfo .request_form form{
-        width:95%;
-        margin:60px auto;
-        /* padding:5px; */
-    }
-    #request_form form .inputs{
-        flex-wrap:wrap;
-        margin:20px 0;
-    }
-    #request_form form .inputs .data{
-        width:90%;
-        margin:10px auto;
-    }
-    #requestInfo .request_form form .inputs .data input{
-        width:100%;    
-    }
-    #request_form form .inputs .data select{
-        width:100%;
-    }
-    #request_form form .inputs .data label{
-        font-size:.9rem;
-    }
-    #request_form form .inputs .data input{
-        width:100%;
-    }
-    #request_form form .inputs2 .data{
-        width: 90%;
-        margin:10px auto;
-    }
-    #request_form form .inputss .data{
-        display:block;
-        width:100%;
-        margin:5px;
-    }
-    #request_form form .inputss .data button{
-        display:block;
-        padding:10px;
-    }
-    #request_form form .inputss .data i{
-        padding:10px;
-    }
-    /* about section */
-    /* hero section */
-    .whyChoose{
-        flex-direction:column-reverse;
-        height:auto;
-    }
-    .whyChoose img{
-        width:100%;
-        height:100%;
-    }
-    .whyChoose .choose_text{
-        width:100%;
-    }
-    .whyChoose .choose_text .chooseImg{
-        
-        width:100%;
-        height:100%;
-    }
-    .whyChoose .choose_text .texts{
-        overflow:scroll;
-    }
-    .whyChoose .choose_text .texts h2{
-        /* text-align:center; */
-        letter-spacing:2px;
-        margin-top:10px;
-        padding:0 10px;
-        font-size:2rem;
-    }
-    .whyChoose .choose_text .texts p{
-        padding:20px;
-        font-size:1rem;
-        color:#fff;
-        text-align:justify;
-    }
-    .whyChoose .choose_text .texts .btns{
-        margin-left:20px;
-    }
-    
-    /* call to action */
-    #callAction{
-        width:90%;
-        
-        
-    }
-    
-    #callAction .action_text{
-        flex-wrap:wrap;
-    
-    }
-    #callAction .action_text img{
-        width:100%;
-    }
-    #callAction .action_text .notes{
-        width:100%;
-    }
-    /* mission_vision section */
-    #mission_vision .mission_vision{
-        flex-direction: column;
-    }
-    #mission_vision .mission_vision .misvis{
-        width:90%;
-        margin:10px auto;
-        padding:10px;
-    }
-    #mission_vision .mission_vision .misvis h3{
-        text-align:center;
-    }
-    #mission_vision .mission_vision .misvis p{
-        text-align: center;
-    }
-    #mission_vision .mission_vision hr{
-        height:3px;
-        margin:10px auto;
-        width:40px;
-    }
     header{
         min-height:8vh;
         padding:5px 10px;
@@ -3326,11 +3135,12 @@ x
     .admin_main .main_menu, .admin_main .mobile_menu{
         display:none;
         position:fixed;
-        top:8vh;
+        top:10vh;
+        left:0;
         width:60vw;
         height:100vh;
         margin:0;
-        z-index:1;
+        z-index:3;
         /* overflow-y:scroll; */
         animation:.4s slideIn 1;
         animation-timing-function: linear;
@@ -3776,7 +3586,12 @@ x
         gap:.5rem;
         text-align: left!important;
     }
-    
+    .for_mobile{
+        display:block!important;
+    }
+    .for_desktop{
+        display:none;
+    }
     
 }
 
