--- a/style.css
+++ b/style.css
@@ -2803,19 +2803,25 @@ x
 .item_categories .diff_cats{
     display:none;
 }
-#sales_item{
+#sales_item, #search_results{
     background:var(--primaryColor);
     color:#fff;
-
+    max-height: 200px;
+    overflow-y: scroll;
 }
-#sales_item option{
+#sales_item option, #search_results option{
     background:var(--otherColor);
     color:#fff;
     padding:10px 5px;
     /* margin:2px 0; */
     border-bottom: 1px solid #fff;
 }
-#sales_item option:hover{
+#search_results{
+    position:absolute;
+    width:100%;
+    
+}
+#sales_item option:hover, #search_results option:hover{
     background:var(--moreColor);
 
 }
