--- a/style.css
+++ b/style.css
@@ -1195,8 +1195,12 @@ table tr:nth-child(even){
     font-weight: bold; 
     margin:10px 0;
 }
-#selectBank, #multiples{
+#selectBank, #multiples, #account_balance{
     display:none;
+}
+#account_balance input{
+    font-size:1.1rem;
+    color:green;
 }
 .payment_mode h3{
     text-transform: capitalize;
@@ -3003,6 +3007,46 @@ x
     margin:3px;
     border-radius: 5px;
 }
+.details_forms{
+    display:flex;
+    flex-wrap: wrap;
+    margin:0;
+    padding:0;
+    align-items: flex-start!important;
+
+}
+.details_forms .addUserForm{
+    width:50%;
+    height:100%!important;
+}
+.details_forms .customer_details{
+    background: var(--primaryColor);
+    color:#fff;
+    padding:10px;
+    width:50%;
+    height:100%!important;
+}
+.details_forms .customer_details input, .details_forms .customer_details label{
+    font-size:1rem;
+
+}
+.top_view{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background:var(--otherColor); */
+}
+.top-view #back{
+    margin:0!important;
+    left:0;
+
+}
+#debt_payment{
+    margin:0 20px!important
+}
+#payment_form label{
+    text-align:left!important;
+}
 @media screen and (max-width: 800px){
     #topHeader{
         justify-content: space-between;
@@ -3653,6 +3697,13 @@ x
         width:95%;
     }
     .change_password section{
+        width:100%;
+    }
+    .details_forms{
+        flex-direction: column!important;
+    }
+    .details_forms .customer_details, .details_forms .addUserForm{
+        padding:5px;
         width:100%;
     }
 }
