--- a/style.css
+++ b/style.css
@@ -1602,15 +1602,16 @@ table tr:nth-child(even){
     flex-direction: column;
 }
 #dashboard .cards p{
-    font-size:.9rem;
+    font-size:.8rem;
     /* text-align:center; */
     text-transform: capitalize;
 }
 #dashboard .cards p:nth-child(2){
-    font-size: .9rem;
+    font-size: .8rem;
 }
 #dashboard .cards .infos{
-    /* margin-top:20px; */
+    margin:0;
+    width:100%;
     display:flex;
     align-items: center;
     justify-content:space-between!important;
