--- a/style.css
+++ b/style.css
@@ -3140,6 +3140,25 @@ x
     text-align: center;
     width:auto;
 }
+.processing{
+    display:none;
+    width:100%;
+}
+.processing .loader {
+    border: 18px solid #cecaca;
+    border-top-color:green;
+    border-radius: 50%;
+    /* background: transparent; */
+    width: 80px;
+    height: 80px;
+    margin:10px auto;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 @media screen and (max-width: 800px){
     #topHeader{
         justify-content: space-between;
